@@ -19,10 +19,13 @@
   "ttsAllowList": [],
   "ttsDenyList": [],
   "streamStopper": [],
+  "filteringHelper": "",
   "autoBlock": [],
   "autoIgnore": [],
   "wordFilter": [],
   "wordBlock": 0,
+  "ignoreAll": 0,
+  "unignoreList": [],
   "withoutBlockMsg": 0,
   "clearBubble": 1,
   "bubblePosition": 0,
@@ -33,7 +36,7 @@
   "replyMsg": "",
   "mentionSound": "",
   "mentionVolume": "",
-  "notifyAccess": 1,
+  "notifyAccess": 0,
   "accessLog": 0,
   "withoutAnon": 0,
   "logRoomName": 0,
